<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="nz.co.appelation.offlinepasswordmanager.AccountActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/accountNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/accountName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/accountUsernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/accountUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/accountPasswordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordFieldRow">

                <EditText
                    android:id="@+id/accountPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="monospace"
                    android:layout_weight="1" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/randomPassword"
                    android:layout_weight="0"
                    android:src="@drawable/ic_autorenew_black_24dp"
                    android:background="@color/colorWindowBackground" />
            </LinearLayout>

            <TextView
                android:id="@+id/accountURLLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/url"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/accountURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/accountCategoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/accountCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/accountNotesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/notes"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/accountNotesDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textNoSuggestions"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:lines="6"
                android:minLines="6"
                android:gravity="start"
                android:singleLine="false"
                android:textColor="?android:attr/editTextColor"
                android:background="?android:attr/editTextBackground"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <EditText
                android:id="@+id/accountNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                android:overScrollMode="always"
                android:lines="6"
                android:minLines="6"
                android:gravity="start"
                android:singleLine="false" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_save" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/action_cancel" />

    </LinearLayout>

</LinearLayout>